# rdkit

.github/workflows/: build_minilib.yml
Code/GraphMol/DetermineBonds/: CMakeLists.txt
Code/MinimalLib/: CMakeLists.txt  jswrapper.cpp  minilib.cpp  minilib.h
Code/MinimalLib/docker/: Dockerfile
Code/MinimalLib/scripts/: build_rdkitjs.sh
